crates/oxc_css/tests/error/scss/at-rule/use/url.snap
---
source: crates/oxc_css/tests/error.rs
---
error: string is expected
  ┌─ url.scss:1:6
  │
1 │ @use foo;
  │      ^^^


